Bug #14526: Partitions: indexed searches fail. When inserting a row into a partitioned table, the value of auto_increment fields was not calculated until after deciding what partition to add the row into, which led to rows being written to the wrong partitions (or spurious errors).

mysql-test/r/partition.result:
  Add new results
mysql-test/t/partition.test:
  Add new regression test
sql/ha_partition.cc:
  Fix notes about, and handling of, auto_increment in ha_partition::write_row().
  We have to decide on an auto_increment value before we can figure out which
  partition the rows should be inserted into.